tests/programs/invalid/choice.java
public class choice {
  public int m(int x) {
    return x==42 ? 87 : x; 
  }
}